// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule element-case configured with "lowercase" smoketest 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "test-files/rules/element-case.html",
    "messages": [
      {
        "column": 2,
        "line": 2,
        "message": "Element "DIV" should be lowercase",
        "offset": 13,
        "ruleId": "element-case",
        "ruleUrl": "https://html-validate.org/rules/element-case.html",
        "selector": "div:nth-child(2)",
        "severity": 2,
        "size": 3,
      },
      {
        "column": 2,
        "line": 3,
        "message": "Element "dIV" should be lowercase",
        "offset": 25,
        "ruleId": "element-case",
        "ruleUrl": "https://html-validate.org/rules/element-case.html",
        "selector": "div:nth-child(3)",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<div></div>
<DIV></DIV>
<dIV></dIV>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-case configured with "uppercase" smoketest 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "test-files/rules/element-case.html",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "Element "div" should be uppercase",
        "offset": 1,
        "ruleId": "element-case",
        "ruleUrl": "https://html-validate.org/rules/element-case.html",
        "selector": "div:nth-child(1)",
        "severity": 2,
        "size": 3,
      },
      {
        "column": 2,
        "line": 3,
        "message": "Element "dIV" should be uppercase",
        "offset": 25,
        "ruleId": "element-case",
        "ruleUrl": "https://html-validate.org/rules/element-case.html",
        "selector": "div:nth-child(3)",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<div></div>
<DIV></DIV>
<dIV></dIV>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-case should contain documentation 1`] = `
{
  "description": "Element tagname must be in lowercase.",
  "url": "https://html-validate.org/rules/element-case.html",
}
`;

exports[`rule element-case should contain documentation with multiple styles 1`] = `
{
  "description": "Element tagname must be in one of:

- lowercase
- pascalcase",
  "url": "https://html-validate.org/rules/element-case.html",
}
`;
